[package]
name = "disco-cli"
version = "0.1.0"
description = "Generate recommendations from CSV files"
repository = "https://github.com/ankane/disco-cli"
license = "MIT"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
discorec = "0.1"
indicatif = "0.16"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.9"
structopt = "0.3"
zip = "0.5"

[[bin]]
name = "disco"
