[package]
name = "disco-cli"
version = "0.1.1"
description = "Generate recommendations from CSV files"
repository = "https://github.com/ankane/disco-cli"
license = "MIT"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
csv = "1"
discorec = { git = "https://github.com/ankane/disco-rust.git" }
indicatif = "0.16"
native-tls = "0.2"
sha2 = "0.9"
ureq = { version = "2", default-features = false, features = ["gzip", "native-tls"] }
zip = "0.5"

[[bin]]
name = "disco"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true
